# ChangeLog for dev-perl/File-Copy-Recursive
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/File-Copy-Recursive/ChangeLog,v 1.1 2007/01/21 00:32:45 mcummings Exp $

*File-Copy-Recursive-0.30 (21 Jan 2007)

  21 Jan 2007; Michael Cummings <mcummings@gentoo.org> +metadata.xml,
  +File-Copy-Recursive-0.30.ebuild:
  New dep for File-Flat
