@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/File-Flat
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/File-Flat/ChangeLog,v 1.40 2007/01/21 00:37:14 mcummings Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/File-Flat/ChangeLog,v 1.41 2007/01/21 07:51:59 nixnut Exp $
+
+  21 Jan 2007; nixnut <nixnut@gentoo.org> File-Flat-1.00.ebuild:
+  Added ~ppc wrt bug 163004
 
 *File-Flat-1.00 (21 Jan 2007)
 
