@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/File-Copy-Recursive
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/File-Copy-Recursive/ChangeLog,v 1.1 2007/01/21 00:32:45 mcummings Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/File-Copy-Recursive/ChangeLog,v 1.2 2007/01/21 07:49:59 nixnut Exp $
+
+  21 Jan 2007; nixnut <nixnut@gentoo.org> File-Copy-Recursive-0.30.ebuild:
+  Added ~ppc wrt bug 163004
 
 *File-Copy-Recursive-0.30 (21 Jan 2007)
 
